--- a/main.html
+++ b/main.html
@@ -15,8 +15,15 @@
                 justify-content: space-between;
             }
 
-            img {
-                width: 300px;
+            .card {
+                flex-basis: 20%;
+                text-align: center;
+            }
+
+            .card_img {
+                width: 100%;
+                height: auto;
+                max-width: 100%;
             }
         </style>
     </head>
